--- a/styles/containers/_SiteInfo.sass
+++ b/styles/containers/_SiteInfo.sass
@@ -11,7 +11,7 @@
 	flex-direction: column
 	justify-content: center
 	align-items: center
-	background: rgba(255, 255, 255, .92)
+	@include theme-background-blur-backdrop
 	top: 0
 	right: 0
 	bottom: 0
